@@ -50,9 +50,8 @@ Installation
 3 - Configure Sites in admin interface to define the 'View on site'
     link.
 
-4 - Download jQuery and tablesorter .min.js files and copy them
-    in /media/js directory. Create a symlink jquery-latest.min.js
-    poiting to jquery-.?.?.?.min.js
+4 - Download jQuery and tablesorter .min.js files and copy them in
+    /media/js directory. Rename jquery-x.y.z.min.js into jquery.min.js
 
 OpenID support
 ==============
