@@ -4,13 +4,13 @@
 {% load stats_extras %}
 
 {% block extrahead %}
-<script type="text/javascript" src="{{ MEDIA_URL}}js/jquery-latest.min.js"></script> 
-<script type="text/javascript" src="{{ MEDIA_URL}}js/jquery.tablesorter.min.js"></script>
+<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.min.js"></script> 
+<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.tablesorter.min.js"></script>
 <script type="text/javascript">
 $(document).ready(function() 
     { 
         $("#working_on").tablesorter(); 
-    } 
+    }
 );
 </script>
 {% endblock %}
